<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.googlequiz.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.example.android.googlequiz.MainActivity">


        <!-- Header -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/header_background"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:src="@drawable/google" />


        <!-- Body -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="76dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textField"
                android:id="@+id/name_edit_text"
                android:inputType="textCapWords"/>


            <!-- Question 1 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:shadowDy="1"
                android:shadowDx="1"
                android:shadowRadius="2"
                android:textStyle="bold"
                android:shadowColor="@android:color/black"
                android:text="@string/question1"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_1"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_1Question1"
                    android:text="@string/q1Choice1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_2Question1"
                    android:text="@string/q1Choice2"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_3Question1"
                    android:text="@string/q1Choice3"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_4Question1"
                    android:text="@string/q1Choice4"/>

            </RadioGroup>


            <!-- Line -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>


            <!-- Question 2 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:shadowDy="1"
                android:shadowDx="1"
                android:shadowRadius="2"
                android:textStyle="bold"
                android:shadowColor="@android:color/black"
                android:text="@string/question2"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_2"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_1Question2"
                    android:text="@string/q2Choice1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_2Question2"
                    android:text="@string/q2Choice2"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_3Question2"
                    android:text="@string/q2Choice3"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_4Question2"
                    android:text="@string/q2Choice4"/>

            </RadioGroup>


            <!-- Line -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>


            <!-- Question 3 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:shadowDy="1"
                android:shadowDx="1"
                android:shadowRadius="2"
                android:textStyle="bold"
                android:shadowColor="@android:color/black"
                android:text="@string/question3"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_3"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_1Question3"
                    android:text="@string/q3Choice1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_2Question3"
                    android:text="@string/q3Choice2"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_3Question3"
                    android:text="@string/q3Choice3"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_4Question3"
                    android:text="@string/q3Choice4"/>

            </RadioGroup>


            <!-- Line -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>


            <!-- Question 4 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:shadowDy="1"
                android:shadowDx="1"
                android:shadowRadius="2"
                android:textStyle="bold"
                android:shadowColor="@android:color/black"
                android:text="@string/question4"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_4"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_1Question4"
                    android:text="@string/q4Choice1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_2Question4"
                    android:text="@string/q4Choice2"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_3Question4"
                    android:text="@string/q4Choice3"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_4Question4"
                    android:text="@string/q4Choice4"/>

            </RadioGroup>


            <!-- Line -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>


            <!-- Question 5 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:shadowDy="1"
                android:shadowDx="1"
                android:shadowRadius="2"
                android:textStyle="bold"
                android:shadowColor="@android:color/black"
                android:text="@string/question5"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_5"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_1Question5"
                    android:text="@string/q5Choice1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_2Question5"
                    android:text="@string/q5Choice2"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_3Question5"
                    android:text="@string/q5Choice3"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_4Question5"
                    android:text="@string/q5Choice4"/>

            </RadioGroup>


            <!-- Line -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>


            <!-- Question 6 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:shadowDy="1"
                android:shadowDx="1"
                android:shadowRadius="2"
                android:textStyle="bold"
                android:shadowColor="@android:color/black"
                android:text="@string/question3"/>


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question6Choice1Check"
                android:text="@string/q6Choice1"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question6Choice2Check"
                android:text="@string/q6Choice2"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question6Choice3Check"
                android:text="@string/q6Choice3"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question6Choice4Check"
                android:text="@string/q6Choice4"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question6Choice5Check"
                android:text="@string/q6Choice5"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question6Choice6Check"
                android:text="@string/q6Choice6"/>



            <!-- Line -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>


            <!-- Result / Reset Buttons -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="calculateResult"
                    android:layout_marginRight="100dp"
                    android:textColor="@android:color/white"
                    android:text="@string/resultBtn"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reset"
                    android:textColor="@android:color/white"
                    android:text="@string/resetBtn"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</ScrollView>